--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                 <a href="{% url 'about' %}">About Me</a>
                 <a href="{% url 'projects_list' %}">Projects</a>
                 <a href="#">Experience</a>
-                <a href="#">Contact</a>
+                <a href="{% url 'contact' %}">Contact</a>
             </div>
         </nav>
     </header>
